@@ -15,3 +15,12 @@ java {
 application {
     mainClass = "com.ikeda.Main"
 }
+
+dependencies {
+    implementation("com.worksap.nlp:sudachi:0.7.5")
+}
+
+tasks.named<JavaExec>("run") {
+    workingDir = projectDir
+    jvmArgs("--sun-misc-unsafe-memory-access=allow")
+}
